objects/Case_Skills__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Skills defined on case to support prioritization and case assignment</description>
    <fields>
        <fullName>RL_Daily_Case_Bandwidth__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: The average number of cases a rights letter associate processes daily - helps determine ratio of cases to select for quality review (denominator)</description>
        <inlineHelpText>The average number of cases a rights letter associate processes daily - helps determine ratio of cases to select for quality review (denominator)</inlineHelpText>
        <label>RL Daily Case Bandwidth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_Daily_Cases_for_Quality_Review__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: The average number of cases to select daily for quality review - helps determine ratio of cases to select (numerator)</description>
        <inlineHelpText>The average number of cases to select daily for quality review - helps determine ratio of cases to select (numerator)</inlineHelpText>
        <label>RL Daily Cases for Quality Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RL_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Defines whether the associate is authorized to process rights letters for leases</description>
        <inlineHelpText>Fill the checkbox if the associate is qualified to process rights letters for leases</inlineHelpText>
        <label>RL Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_New_Hire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Drives the quality review case creation process and identifies a user as an inexperienced rights letter processor.</description>
        <inlineHelpText>Check to require quality review for all rights letters generated.</inlineHelpText>
        <label>RL New Hire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_State_of_Jurisdiction__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Defines the states for which associates are authorized to process rights letters</description>
        <inlineHelpText>Enter each state for which the associate is qualified to process rights letters on a separate line - for example:

CA
IL
MD</inlineHelpText>
        <label>RL State of Jurisdiction</label>
        <type>TextArea</type>
    </fields>
    <label>Case Skills</label>
</CustomObject>